Avoid scrollbar in Chrome, but allow scrolling

--- a/app/app.css
+++ b/app/app.css
@@ -3,6 +3,10 @@
 *::after {
   box-sizing: border-box;
 }
+::-webkit-scrollbar {
+  width: 0px;  /* remove scrollbar space */
+  background: transparent;  /* optional: just make scrollbar invisible */
+}
 
 body {
   display: -webkit-box;
